--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,37 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-title: ismaro3
+title: ismaro3.github.io
+url: "http://ismaro3.github.io"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
+baseurl: '' # the prefix of your site uri, eg. `/jekyll-theme-EasyBook` or just one slash `/`
+#timezone: Europe/Madrid
+description: >
+  Blog de mis proyectos de programación
+
+# Your information
 email: ismaro.394@gmail.com
-description: Blog de proyectos de programación, ismaro3.  
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://ismaelrh.github.com" # the base hostname & protocol for your site
-twitter_username: ismaro3
+author: Ismael Rodríguez
+avatar: "//www.gravatar.com/avatar/4de8d654bf7cffcbd7bbc18fd3bc1e34?d=mm&s=135"
+profile: Estudiante de Ingeniería Informática
+#twitter_username: ismaro3
 github_username:  ismaro3
 
+# Comment Service (Disqus or 多说)
+#  choose one and un-comment the line to active it
+#disqus_shortname: xxx   # get one: https://disqus.com/admin/signup/
+#duoshuo_shortname: xxx  # get one: http://duoshuo.com/create-site/
+
+permalink: /archivers/:title
+gems:
+ - jekyll-paginate
+ - jekyll-gist
+ - jemoji
+
 # Build settings
+paginate: 5
+paginate_path: "page:num"
+
+highlighter: rouge
 markdown: kramdown
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
